--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,7 @@
         <dependency>
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
+            <version>42.5.1</version>
             <scope>runtime</scope>
         </dependency>
 
@@ -65,6 +66,7 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <configuration>
+                    <imageName>irarenzo/exercise-backend</imageName>
                     <excludes>
                         <exclude>
                             <groupId>org.projectlombok</groupId>
